launchpad-buildd (193) UNRELEASED; urgency=medium

  * Fix handling of bytes arguments passed to BuildManager.runSubProcess.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Sep 2020 16:45:27 +0100

launchpad-buildd (192) bionic; urgency=medium

  * Update Maintainer to launchpad-dev.
  * Handle bytes in shell_escape, fixing recipe builds on Python 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 23 Sep 2020 23:49:35 +0100

launchpad-buildd (191) bionic; urgency=medium

  [ Colin Watson ]
  * Fix version checks for deployments using Python 3.

  [ Tom Wardill ]
  * Fix proxy token revocation on Python 3.

  [ Thiago F. Pappacena ]
  * Add support for --build-arg when building OCI images (LP: #1892351).

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 17 Sep 2020 16:08:58 +0100

launchpad-buildd (190) bionic; urgency=medium

  [ Colin Watson ]
  * Switch to git; add Vcs-* fields.
  * Always call Resource.putChild with path as bytes.
  * Switch RotatableFileLogObserver from class advice to a class decorator.
  * Work around /proc/self/fd-related test hang on Python >= 3.3.
  * Adjust tests to avoid making assumptions about dict iteration order.
  * Open temporary files in text mode in more cases.
  * Ensure that regex patterns with \-escapes are raw strings.
  * Adjust X-LXD-mode header construction for Python 3.
  * Treat build logs as binary files.
  * Treat build output files as binary files.
  * Treat intltool-related files as binary files.
  * Fix bytes/text handling in backends and their tests.
  * Fix OCI tests on Python 3.
  * Make buildrecipe compatible with Python 3.
  * Fix get_arch_bits for Python 3.
  * Skip tests involving daemonisation on Python 3 and Twisted < 16.4.0.
  * Only include mock in tests_require for Python 2.
  * Fix snap proxy testing for Python 3.
  * Rename [slave] configuration section to [builder].
  * Convert translation templates builds to the VCS mixin, thereby adding
    git support.