@@ -93,18 +93,15 @@ class RecipeBuilder:
         assert not os.path.exists(self.tree_path)
         recipe_path = os.path.join(self.work_dir, 'recipe')
         manifest_path = os.path.join(self.tree_path, 'manifest')
-        recipe_file = open(recipe_path, 'rb')
-        try:
+        with open(recipe_path) as recipe_file:
             recipe = recipe_file.read()
-        finally:
-            recipe_file.close()
         # As of bzr 2.2, a defined identity is needed.  In this case, we're
         # using buildd@<hostname>.
         hostname = socket.gethostname()
         email = 'buildd@%s' % hostname
-        lsb_release = subprocess.Popen(['/usr/bin/sudo',
+        lsb_release = subprocess.Popen(['sudo',
             '/usr/sbin/chroot', self.chroot_path, 'lsb_release',
-            '-r', '-s'], stdout=subprocess.PIPE)
+            '-r', '-s'], stdout=subprocess.PIPE, universal_newlines=True)
         distroseries_version = lsb_release.communicate()[0].rstrip()
         assert lsb_release.returncode == 0
 
@@ -112,8 +109,8 @@ class RecipeBuilder:
             print('Git version:')
             subprocess.check_call(['git', '--version'])
             print(subprocess.check_output(
-                ['dpkg-query', '-W', 'git-build-recipe']).rstrip(
-                    '\n').replace('\t', ' '))
+                ['dpkg-query', '-W', 'git-build-recipe'],
+                universal_newlines=True).rstrip('\n').replace('\t', ' '))
         else:
             print('Bazaar versions:')
             subprocess.check_call(['bzr', 'version'])
