@@ -1,6 +1,7 @@
 launchpad-buildd (193) UNRELEASED; urgency=medium
 
   * Fix handling of bytes arguments passed to BuildManager.runSubProcess.
+  * Fix bytes/text handling in RecipeBuilder.buildTree.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu, 24 Sep 2020 16:45:27 +0100
 
